# dummy-branch-app

./: .env.development  .env.example  .flake8  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  SERVER_SETUP.md  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  generate_cert.ps1  generate_cert_win.ps1  generate_ssl.ps1  generate_ssl.sh  generate_ssl_docker.sh  generate_ssl_new.ps1  generate_ssl_simple.ps1  generate_ssl_with_docker.ps1  pyproject.toml  requirements.txt  setup-dev.ps1  setup-env.ps1  setup.py  setup_ssl_and_hosts.ps1  verify-setup.ps1  wsgi.py
.github/workflows/: ci-cd.yml
app/: __init__.py  config.py  db.py  main.py  metrics.py  models.py  schemas.py
app/routes/: __init__.py  health.py  loans.py  stats.py
monitoring/grafana/provisioning/dashboards/: dashboard.json
monitoring/prometheus/: prometheus.yml
nginx/: Dockerfile  api.conf  default.conf  nginx.conf  simple.conf
nginx/ssl/: branchloans.pem
scripts/: generate-ssl.sh  generate_ssl.ps1  generate_ssl.sh
tests/: conftest.py  test_health.py
