[tool.poetry]
name = "branch-loans-api"
version = "0.1.0"
description = "A production-ready REST API for microloans"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
fastapi = "0.100.0"
uvicorn = {extras = ["standard"], version = "0.23.2"}
gunicorn = "21.2.0"
sqlalchemy = "2.0.20"
alembic = "1.12.1"
psycopg2-binary = "2.9.7"
sqlalchemy-utils = "0.41.1"
pydantic = "1.10.13"
pydantic-settings = "2.0.3"
python-dotenv = "1.0.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.6"
email-validator = "2.0.0"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
prometheus-fastapi-instrumentator = "6.3.0"
structlog = "23.1.0"
python-json-logger = "2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-cov = "4.0.0"
pytest-asyncio = "0.21.0"
httpx = "0.24.1"
watchfiles = "0.19.0"
black = "23.3.0"
isort = "5.12.0"
flake8 = "6.0.0"
mypy = "1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"
filterwarnings = ["error", "ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/migrations/*",
    "app/tests/*",
    "app/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[alembic]
script_location = "alembic"
template = "migration"
sqlalchemy.url = "postgresql+psycopg2://postgres:postgres@db:5432/microloans"

[alembic.script]
version_locations = "alembic/versions"

[alembic.script.mako]
template = "migration"

[alembic.script.revision_environment]
revision_environment = true
show_column_numbers = true
show_error_codes = true
